# commitkit-rust

./: .commitkit.toml  .editorconfig  .gitignore  .pre-commit-config.yaml  .rustfmt.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  STYLE_GUIDE.md  build.rs  clippy.toml  commitkit.rs  example-config.toml  rustfmt.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md  settings.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  release.yml  semver.yml
src/: changelog.rs  config.rs  emoji.rs  error.rs  git.rs  hooks.rs  lib.rs  main.rs  prompt.rs  stats.rs  template.rs  tests.rs  version.rs
