[package]
name = "commitkit"
version = "0.1.0"
authors = ["Thomas Vincent"]
edition = "2021"
description = "A CLI tool for creating conventional commits"
repository = "https://github.com/thomasvincent/commitkit-rust"
documentation = "https://docs.rs/commitkit"
license = "MIT"
readme = "README.md"
keywords = ["git", "commit", "conventional-commits", "cli", "development"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.85.0"

[badges]
maintenance = { status = "actively-developed" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
thiserror = "2.0"
home = "0.5"
anyhow = "1.0"
dialoguer = "0.11"
console = "0.15"
chrono = "0.4"
regex = "1.10"
once_cell = "1.19"
tempfile = "3.20"